--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <main>
   <app-book-grid></app-book-grid>
 </main>
+
+<app-fab (toggle)="toggleSearch()"></app-fab>
+<app-search-overlay [isOpen]="isSearchOpen" (close)="closeSearch()">
+</app-search-overlay>
